--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,9 @@
           <span id="counter">10</span> seconds.
         </h2>
       </div>
+      <div class="loader container-fluid">
+        <div></div>
+      </div>
     </nav>
 
     <!-- input user -->
