--- a/src/index.html
+++ b/src/index.html
@@ -61,14 +61,14 @@
 
     <!-- button -->
 
-    <div class="d-grid gap-2 col-3 mx-auto mt-4 position-relative">
+    <div class="d-grid gap-2 col-1 mx-auto mt-4 position-relative">
       <button
         type="button"
         id="myButton"
         class="btn btn-outline-warning"
         onclick="refreshCard()"
       >
-        CLICK if you want another card or CHANGE width and height
+        CLICK for new card
       </button>
     </div>
 
@@ -84,3 +84,5 @@
     </div>
   </body>
 </html>
+
+
